# Synthetic_data_factory

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  run_app.sh
config/: prompts.yaml  settings.yaml
data/: adapters.db
data/processed/: synthetic_data.jsonl
src/: main.py  merge.py  test.py
src/data_eng/: formatter.py  hf_uploader.py
src/database/: adapter_lib.py
src/evaluation/: benchmarks.py  metrics.py
src/genfactory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/graph/: edges.py  nodes.py  state.py  workflow.py
src/training/: train_supercomputer.py  trainer_laptop.py
src/ui/: app.py  arena.py  arena_inference.py  sidebar.py
src/utils/: config_manager.py
